--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>SalaJuegos</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon2.ico">
+  <link rel="icon" type="image/x-icon" href="https://images.vexels.com/media/users/3/224138/isolated/preview/ad1194c5e4558e72fa53c869a57b61e1-logotipo-violeta-ondulado-abstracto.png">
 </head>
 <body>
   <app-root></app-root>
